<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizappfinal.MainActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:textSize="32dp"
                android:layout_marginLeft="135dp"/>
        </LinearLayout>

        <!--Question 1 -->
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:background="@color/colorAccent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textSize="22dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/question_1_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp">
                <RadioButton
                    android:id="@+id/question_1_radio1"
                    android:text="q1Option1" />

                <RadioButton
                    android:id="@+id/question_1_radio2"
                    android:text="q1Option2"
                    />

                <RadioButton
                    android:id="@+id/question_1_radio3"
                    android:text="@string/q1Option3"
                    />
            </RadioGroup>

        </LinearLayout>

        <!--Question 2 -->
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:background="@color/colorAccent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:textSize="22dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/question_2_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp">

                <RadioButton
                    android:id="@+id/question_2_radio1"
                    android:text="@string/q2Option1"
                    />

                <RadioButton
                    android:id="@+id/question_2_radio2"
                    android:text="@string/q2Option2"
                    />

                <RadioButton
                    android:id="@+id/question_2_radio3"
                    android:text="@string/q2Option3" />
            </RadioGroup>

        </LinearLayout>
        <!--Question 3 -->
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:background="@color/colorAccent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/question_3_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp">

                <CheckBox
                    android:id="@+id/question_3_checkBox1"
                    android:text="@string/q3Option1" />

                <CheckBox
                    android:id="@+id/question_3_checkBox2"
                    android:text="@string/q3Option2"
                    />

                <CheckBox
                    android:id="@+id/question_3_checkBox3"
                    android:text="@string/q3Option3" />
            </CheckBox>

        </LinearLayout>
        <!--Question 4-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4"/>

            <EditText
                android:id="@+id/question4Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitBTN"
                android:layout_marginLeft="150dp"
                android:background="@android:color/holo_green_light"
                android:textSize="20dp"
                android:onClick="checkAnswers"/>
        </LinearLayout>





    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
